--- a/index.html
+++ b/index.html
@@ -23,55 +23,55 @@
       <div class="input-group input-group-lg">
         <span class="input-group-text" id="inputGroup-sizing-lg">9 am</span>
         <textarea type="text " class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-lg"></textarea>
-        <button class="input-group-text saveBtn" id="inputGroup-sizing-lg">Save</button>
+        <button class="input-group-text saveBtn" id="inputGroup-sizing-lg"><i class="fa fa-save"></i></button>
       </div>
 
       <div class="input-group input-group-lg">
         <span class="input-group-text" id="inputGroup-sizing-lg">10 am</span>
         <textarea type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-lg"></textarea>
-        <button class="input-group-text" id="inputGroup-sizing-lg">Save</button>
+        <button class="input-group-text saveBtn" id="inputGroup-sizing-lg"><i class="fa fa-save"></i></button>
       </div>
 
       <div class="input-group input-group-lg">
         <span class="input-group-text" id="inputGroup-sizing-lg">11 am</span>
         <textarea type="text " class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-lg"></textarea>
-        <button class="input-group-text" id="inputGroup-sizing-lg">Save</button>
+        <button class="input-group-text saveBtn" id="inputGroup-sizing-lg"><i class="fa fa-save"></i></button>
       </div>
 
       <div class="input-group input-group-lg">
         <span class="input-group-text" id="inputGroup-sizing-lg">12 pm</span>
         <textarea type="text " class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-lg"></textarea>
-        <button class="input-group-text" id="inputGroup-sizing-lg">Save</button>
+        <button class="input-group-text saveBtn" id="inputGroup-sizing-lg"><i class="fa fa-save"></i></button>
       </div>
 
       <div class="input-group input-group-lg">
         <span class="input-group-text" id="inputGroup-sizing-lg">1 pm</span>
         <textarea type="text " class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-lg"></textarea>
-        <button class="input-group-text" id="inputGroup-sizing-lg">Save</button>
+        <button class="input-group-text saveBtn" id="inputGroup-sizing-lg"><i class="fa fa-save"></i></button>
       </div>
 
       <div class="input-group input-group-lg">
         <span class="input-group-text" id="inputGroup-sizing-lg">2 pm</span>
         <textarea type="text " class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-lg"></textarea>
-        <button class="input-group-text" id="inputGroup-sizing-lg">Save</button>
+        <button class="input-group-text saveBtn" id="inputGroup-sizing-lg"><i class="fa fa-save"></i></button>
       </div>
 
       <div class="input-group input-group-lg">
         <span class="input-group-text" id="inputGroup-sizing-lg">3 pm</span>
         <textarea type="text " class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-lg"></textarea>
-        <button class="input-group-text" id="inputGroup-sizing-lg">Save</button>
+        <button class="input-group-text saveBtn" id="inputGroup-sizing-lg"><i class="fa fa-save"></i></button>
       </div>
 
       <div class="input-group input-group-lg">
         <span class="input-group-text" id="inputGroup-sizing-lg">4 pm</span>
         <textarea type="text " class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-lg"></textarea>
-        <button class="input-group-text" id="inputGroup-sizing-lg">Save</button>
+        <button class="input-group-text saveBtn" id="inputGroup-sizing-lg"><i class="fa fa-save"></i></button>
       </div>
 
       <div class="input-group input-group-lg">
         <span class="input-group-text" id="inputGroup-sizing-lg">5 pm</span>
         <textarea type="text " class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-lg"></textarea>
-        <button class="input-group-text" id="inputGroup-sizing-lg">Save</button>
+        <button class="input-group-text saveBtn" id="inputGroup-sizing-lg"><i class="fa fa-save"></i></button>
       </div>
 
     </div>
