--- a/index.html
+++ b/index.html
@@ -13,63 +13,63 @@
   </head>
 
   <body>
-    <header class="jumbotron ">
+    <header class="jumbotron">
       <h1 class="display-3">Work Day Scheduler</h1>
       <p class="lead">A simple calendar app for scheduling your work day</p>
       <p id="currentDay" class="lead"></p>
     </header>
     <div class="container">
-      <!-- Timeblocks go here -->
+      
       <div class="input-group input-group-lg">
-        <span id="9-am" class="input-group-text" id="inputGroup-sizing-lg">9 am</span>
+        <span class="input-group-text texting" id="inputGroup-sizing-lg">9 am</span>
         <textarea type="text " class="form-control custom-row" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-lg" id="9"></textarea>
         <button id="9ambtn" class="input-group-text saveBtn" id="inputGroup-sizing-lg"><i class="fa fa-save"></i></button>
       </div>
 
       <div class="input-group input-group-lg">
-        <span id="10-am" class="input-group-text" id="inputGroup-sizing-lg">10 am</span>
+        <span class="input-group-text texting" id="inputGroup-sizing-lg">10 am</span>
         <textarea type="text" class="form-control custom-row" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-lg" id="10"></textarea>
         <button id="10ambtn" class="input-group-text saveBtn" id="inputGroup-sizing-lg"><i class="fa fa-save"></i></button>
       </div>
 
       <div class="input-group input-group-lg">
-        <span id="11-am" class="input-group-text" id="inputGroup-sizing-lg">11 am</span>
+        <span class="input-group-text texting" id="inputGroup-sizing-lg">11 am</span>
         <textarea type="text " class="form-control custom-row" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-lg" id="11"></textarea>
         <button id="11ambtn" class="input-group-text saveBtn" id="inputGroup-sizing-lg"><i class="fa fa-save"></i></button>
       </div>
 
       <div class="input-group input-group-lg">
-        <span id="12-pm" class="input-group-text" id="inputGroup-sizing-lg">12 pm</span>
+        <span class="input-group-text texting" id="inputGroup-sizing-lg">12 pm</span>
         <textarea type="text " class="form-control custom-row" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-lg" id="12"></textarea>
         <button id="12pmbtn" class="input-group-text saveBtn" id="inputGroup-sizing-lg"><i class="fa fa-save"></i></button>
       </div>
 
       <div class="input-group input-group-lg">
-        <span id="1-pm" class="input-group-text" id="inputGroup-sizing-lg">1 pm</span>
+        <span class="input-group-text texting" id="inputGroup-sizing-lg">1 pm</span>
         <textarea type="text " class="form-control custom-row" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-lg" id="1"></textarea>
         <button id="1pmbtn" class="input-group-text saveBtn" id="inputGroup-sizing-lg"><i class="fa fa-save"></i></button>
       </div>
 
       <div class="input-group input-group-lg">
-        <span id="2-pm" class="input-group-text" id="inputGroup-sizing-lg">2 pm</span>
+        <span class="input-group-text texting" id="inputGroup-sizing-lg">2 pm</span>
         <textarea type="text " class="form-control custom-row" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-lg" id="2"></textarea>
         <button id="2pmbtn" class="input-group-text saveBtn" id="inputGroup-sizing-lg"><i class="fa fa-save"></i></button>
       </div>
 
       <div class="input-group input-group-lg">
-        <span id="3-pm" class="input-group-text" id="inputGroup-sizing-lg">3 pm</span>
+        <span class="input-group-text texting" id="inputGroup-sizing-lg">3 pm</span>
         <textarea type="text " class="form-control custom-row" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-lg" id="3"></textarea>
         <button id="3pmbtn" class="input-group-text saveBtn" id="inputGroup-sizing-lg"><i class="fa fa-save"></i></button>
       </div>
 
       <div class="input-group input-group-lg">
-        <span id="4-pm" class="input-group-text" id="inputGroup-sizing-lg">4 pm</span>
+        <span class="input-group-text texting" id="inputGroup-sizing-lg">4 pm</span>
         <textarea type="text " class="form-control custom-row" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-lg" id="4"></textarea>
         <button id="4pmbtn" class="input-group-text saveBtn" id="inputGroup-sizing-lg"><i class="fa fa-save"></i></button>
       </div>
 
       <div class="input-group input-group-lg">
-        <span id="5-pm" class="input-group-text" id="inputGroup-sizing-lg">5 pm</span>
+        <span class="input-group-text texting" id="inputGroup-sizing-lg">5 pm</span>
         <textarea type="text " class="form-control custom-row" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-lg" id="5"></textarea>
         <button id="5pmbtn" class="input-group-text saveBtn" id="inputGroup-sizing-lg"><i class="fa fa-save"></i></button>
       </div>
