updating save button

--- a/index.html
+++ b/index.html
@@ -74,8 +74,12 @@
         <button id="5pmbtn" class="input-group-text saveBtn" id="inputGroup-sizing-lg"><i class="fa fa-save"></i></button>
       </div>
 
-    </div>
+      <div class="btn-group d-flex justify-content-center">
+        <button type="button" class="btn btn-warning mt-2 mb-5 p-auto custom-clear">Clear Day Calander</button>    
+      </div>
 
+    </div>
+    
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
     <script src="script.js"></script>
